# rules_wpi_styleguide

./: MODULE.bazel  WORKSPACE
.github/workflows/: build.yml  publish.yml
dependencies/: load_dependencies.bzl  load_pins.bzl  load_rule_dependencies.bzl  load_transitive_dependencies.bzl  setup_styleguide.bzl
generate/: BUILD.bazel  MODULE.bazel  WORKSPACE  generate.py  get_styleguide_dependencies.py  get_version.py  publish.py
generate/templates/: MODULE.bazel.jinja2
generate/templates/.github/workflows/: build.yml.jinja2
generate/templates/dependencies/: load_rule_dependencies.bzl.jinja2  load_transitive_dependencies.bzl.jinja2
generate/templates/tests/: MODULE.bazel.jinja2
styleguide/: BUILD.bazel  cc_styleguide.bzl  checkstyle-suppressions.xml  checkstyle.xml  java_styleguide.bzl  pmd-ruleset.xml  spotless_java.prototxt
tests/: .bazelrc  MODULE.bazel  WORKSPACE
tests/java/: BUILD.bazel  BasicTest.java
