py_library(
    name = "get_styleguide_dependencies",
    srcs = ["get_styleguide_dependencies.py"],
    visibility = ["//visibility:public"],
    deps = [
        "@bzlmodrio-gentool//bazelrio_gentool",
    ],
)

py_binary(
    name = "generate",
    srcs = ["generate.py"],
    deps = [
        ":get_styleguide_dependencies",
        "@bzlmodrio-gentool//bazelrio_gentool",
    ],
)

py_binary(
    name = "publish",
    srcs = ["publish.py"],
    deps = [
        ":get_styleguide_dependencies",
        "@bzlmodrio-gentool//bazelrio_gentool",
    ],
)
